[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roshtools"
version = "0.1.0"
description = "Handy Python utilities for strings, files, timing, and networking."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name="Roshan Gupta", email="roshandec252@gmail.com" }
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/roshandec29"
