[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roshtools"
version = "0.1.5"
description = "Handy Python utilities for strings, files, timing, and networking."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Roshan Gupta", email = "roshandec252@gmail.com" }
]
keywords = ["utilities", "tools", "python", "files", "strings", "timer", "networking"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests"
]

[project.urls]
Homepage = "https://github.com/roshandec29/roshtools"
Repository = "https://github.com/roshandec29/roshtools"
Issues = "https://github.com/roshandec29/roshtools/issues"
